test/yaml/testdata/input/regex/multiple-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: regex-ingress
  namespace: namespace1
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: api.example.com
    http:
      paths:
      - path: /api/v[0-9]+/users
        pathType: ImplementationSpecific
        backend:
          service:
            name: service-ingress1
            port:
              number: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: not-regex-ingress
  namespace: namespace1
spec:
  ingressClassName: nginx
  rules:
  - host: api.example.com
    http:
      paths:
      - path: /api/v1/orders
        pathType: Prefix
        backend:
          service:
            name: service-ingress1
            port:
              number: 443
---
apiVersion: v1
kind: Service
metadata:
  name: service-ingress1
  namespace: namespace1
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 443
